--- a/my-app/src/pages/Product.css
+++ b/my-app/src/pages/Product.css
@@ -1,4 +1,3 @@
-/* تحسين التصميم للأجهزة الكبيرة */
 .content {
     display: flex;
     gap: 40px;
@@ -9,39 +8,40 @@
     padding: 20px;
     font-family: sans-serif;
     border-top: 1px solid #ccc;
-    height: 70vh;
+    height: 50vh;
   }
   
   .images {
     flex: 6;
     display: flex;
     width: auto;
-    gap: 10px;
-    flex-direction: column;
+    gap: 50px;
   }
   
   .list-images {
     display: flex;
-    flex: 4;
+    flex-direction: column;
     border-radius: 8px;
-    gap: 10px;
-    width: 100%;
-    height: 80px;
-  }
-  
+    gap: 20px;
+  } 
   .list-images img {
     border-radius: 8px;
-    height: 100px;
-    width: 120px;
-    /* object-fit: cover; */
+    width: 105px;
+    height: 110px;
+    object-fit: cover;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
   }
   
   .image {
-    flex: 8;
+    width: 460px;
     height: 500px;
     object-fit: cover;
     border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   }
+  
+  
   
   .details-product {
     flex: 6;
