--- a/my-app/src/components/MainContent.css
+++ b/my-app/src/components/MainContent.css
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    height: 65vh;
     margin-top: 4;
     border: 0.1px solid rgb(160, 158, 158); 
     /* box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); */
@@ -46,4 +45,28 @@
     height: 3px;
     background-color: black;   
     margin: 0 10px;
+}
+
+/* responsive main */
+@media (max-width: 768px) {
+    .sideContent {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .sideLeft {
+        order: 1;
+    }
+
+    .sideRight{
+    }
+
+    .headerSection {
+        text-align: center;
+    }
+
+    .img {
+        object-fit: cover;
+    
+    }
 }
