--- a/my-app/src/components/LatestCollection.css
+++ b/my-app/src/components/LatestCollection.css
@@ -12,3 +12,20 @@
     gap: 20px;
     padding: 20px;
   }
+
+  .view-more {
+    margin-top: 20px;
+    padding: 15px 40px;
+    border-radius: 8px;
+    border: gray 1px solid;
+    background-color: white;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+  }
+
+  .view-more:hover {
+    transition: transform 0.8s ease;
+    background-color: #f5f5f5;
+  }
