--- a/my-app/src/pages/Collection.css
+++ b/my-app/src/pages/Collection.css
@@ -16,7 +16,7 @@
 
 .filter{
     padding: 15px;
-    border: 1px solid black;
+    border: 1px solid gray;
     display: flex;
     flex-direction: column;
     gap: 10px;
