--- a/my-app/src/pages/Product.css
+++ b/my-app/src/pages/Product.css
@@ -2,20 +2,22 @@
     display: flex;
     gap: 40px;
     width: 90%;
-    max-width: 1400px;
+    max-width: 1300px;
     margin: auto;
     margin-top: 20px;
     padding: 20px;
     font-family: sans-serif;
     border-top: 1px solid #ccc;
-    height: 50vh;
+    margin-bottom: 30px;
+    /* height: 30vh; */
+    /* background-color: red; */
   }
   
   .images {
     flex: 6;
     display: flex;
     width: auto;
-    gap: 50px;
+    gap: 30px;
   }
   
   .list-images {
@@ -34,7 +36,6 @@
   }
   
   .image {
-    width: 460px;
     height: 500px;
     object-fit: cover;
     border-radius: 12px;
@@ -86,11 +87,11 @@
   
   .size-options {
     display: flex;
-    gap: 10px;
+    gap: 20px;
   }
   
   .size-btn {
-    padding: 8px 16px;
+    padding: 10px 20px;
     border: 1px solid #ccc;
     background: white;
     cursor: pointer;
@@ -105,7 +106,7 @@
   .add-to-cart {
     background-color: black;
     color: white;
-    padding: 10px 20px;
+    padding: 15px;
     border: none;
     font-weight: bold;
     font-size: 14px;
@@ -113,6 +114,7 @@
     margin-top: 10px;
     border-radius: 4px;
     transition: 0.3s ease;
+    width: 150px;
   }
   
   .add-to-cart:hover {
@@ -121,36 +123,31 @@
   
   .extra-info {
     color: #777;
-    font-size: 13px;
-    margin-top: 15px;
-    line-height: 1.6;
+    font-size: 12px;
+    margin-top: 10px;
+    line-height: 1.4;
   }
   
-  /* بداية Media Queries للأجهزة الصغيرة */
-  
-  /* للأجهزة اللوحية الصغيرة */
-  @media (max-width: 768px) {
+
+  @media (max-width: 990px) {
     .content {
+      width: 80%;
       flex-direction: column;
       gap: 20px;
       padding: 10px;
+      margin: auto;
     }
-  
-    .images {
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
+
   
     .list-images {
-      flex: 1;
-      max-height: none;
-      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      width: 120px;
     }
   
     .image {
-      width: 100%;
-      height: 400px; /* تعديل ارتفاع الصورة الرئيسية */
+      height: 470px;
     }
   
     .details-product {
@@ -175,10 +172,26 @@
     }
   }
   
-  /* للهواتف الذكية */
-  @media (max-width: 480px) {
+ 
+   @media (max-width: 660px) {
     .content {
-      padding: 5px;
+      width: 85%;
+    }
+    .images {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+    .list-images {
+      flex: 1;
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      /* background-color: red; */
+      gap: 10px;
+    }
+
+    .list-images img {
+      width: 23%;
     }
   
     .product-title {
