--- a/my-app/src/components/Card.css
+++ b/my-app/src/components/Card.css
@@ -1,6 +1,5 @@
 .cardContent {
-  width: 255px;
-  height: 380px;
+  width: 230px;
   background-color: #ffffff;
   border-radius: 16px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
@@ -50,8 +49,9 @@
 
 @media (max-width: 650px) {
   .cardContent {
-    width: 300px;
-    height: 420px;
+    width: 340px;
+    /* margin-bottom: 20px; */
+    /* height: 420px; */
   }  
 
   .cardPrix {
