--- a/my-app/src/pages/Product.css
+++ b/my-app/src/pages/Product.css
@@ -8,7 +8,6 @@
     padding: 20px;
     font-family: sans-serif;
     border-top: 1px solid #ccc;
-    margin-bottom: 30px;
     /* height: 30vh; */
     /* background-color: red; */
   }
@@ -131,7 +130,8 @@
 
   @media (max-width: 990px) {
     .content {
-      width: 80%;
+      width: 90%;
+      display: flex;
       flex-direction: column;
       gap: 20px;
       padding: 10px;
@@ -152,6 +152,7 @@
   
     .details-product {
       flex: 1;
+      width: 70%;
     }
   
     .product-title {
