--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -41,6 +41,9 @@
     color: white;
     cursor: pointer;
 }
+.login-form button:hover {
+    background-color: #333;
+}
 
 .login-form .liens {
     /* background-color: red; */
