--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -46,6 +46,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-top: 1px solid #eee; 
+    border-bottom: 1px solid #eee; 
 
 }
 
@@ -64,6 +66,8 @@
 
 .left-item {
     display: flex;
+    width: 450px;
+
 }
 
 .order-product-details {
@@ -71,6 +75,10 @@
     gap: 10px;
     margin-top: -20px;
 
+}
+
+.center-item {
+    margin-left: -120px;
 }
 
 .center-item p {
